finish vite introl

--- a/4-learn-js/first-vite/package.json
+++ b/4-learn-js/first-vite/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
     "preline": "^2.3.0",
     "sweetalert2": "^11.11.1"
   }
