--- a/5-react/13-voucher-app/package.json
+++ b/5-react/13-voucher-app/package.json
@@ -11,9 +11,11 @@
     "api": "json-server --watch data.json --port 5000 --delay 500"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "swr": "^2.2.5",
     "zustand": "^4.5.5"
