--- a/5-react/13-voucher-app/package.json
+++ b/5-react/13-voucher-app/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "swr": "^2.2.5",
