--- a/5-react/17-desgin-voucher-app/package.json
+++ b/5-react/17-desgin-voucher-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "html2pdf.js": "^0.10.2",
     "ldrs": "^1.0.2",
     "lodash": "^4.17.21",
