--- a/5-react/17-desgin-voucher-app/package.json
+++ b/5-react/17-desgin-voucher-app/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "print-js": "^1.6.0",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
